// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ClusterDetailCounter renders a counter with a pluralized label 1`] = `
<div
  class="StyledGrommet-sc-19lkkz7-0 hSiATR"
>
  <div
    class="ThemeProvider__AppWrapper-sc-1qc9t9l-0 bLmXgB"
  >
    <div
      class="StyledBox-sc-13pk1d4-0 fsQmhY"
    >
      <div
        class="StyledBox-sc-13pk1d4-0 eITwkI"
      >
        <div
          class="RefreshableLabel__Wrapper-sc-1joylxa-0 jSwuWB ClusterDetailWidgetOptionalValue__StyledRefreshableLabel-cndk54-0 faHvJH"
        >
          <span
            aria-label="35 dogs"
            class="StyledText-sc-1sadyjn-0 kQovFR"
          >
            35
          </span>
        </div>
      </div>
      <span
        class="StyledText-sc-1sadyjn-0 bTNMGz ClusterDetailCounter__Label-qai318-0 lgOlNu"
      >
        dogs
      </span>
    </div>
  </div>
</div>
`;

exports[`ClusterDetailCounter renders a simple counter 1`] = `
<div
  class="StyledGrommet-sc-19lkkz7-0 hSiATR"
>
  <div
    class="ThemeProvider__AppWrapper-sc-1qc9t9l-0 bLmXgB"
  >
    <div
      class="StyledBox-sc-13pk1d4-0 fsQmhY"
    >
      <div
        class="StyledBox-sc-13pk1d4-0 eITwkI"
      >
        <div
          class="RefreshableLabel__Wrapper-sc-1joylxa-0 jSwuWB ClusterDetailWidgetOptionalValue__StyledRefreshableLabel-cndk54-0 faHvJH"
        >
          <span
            aria-label="1 dog"
            class="StyledText-sc-1sadyjn-0 kQovFR"
          >
            1
          </span>
        </div>
      </div>
      <span
        class="StyledText-sc-1sadyjn-0 bTNMGz ClusterDetailCounter__Label-qai318-0 lgOlNu"
      >
        dog
      </span>
    </div>
  </div>
</div>
`;
